--- a/build.gradle
+++ b/build.gradle
@@ -47,13 +47,7 @@ dependencies {
     // bcrypt
     implementation 'at.favre.lib:bcrypt:0.10.2'
 
-    // Querydsl 의존성
-    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
-    annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
-    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
-    annotationProcessor "jakarta.persistence:jakarta.persistence-api"
-
-    // Redis
+    // 레디스
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 }
 
