--- a/build.gradle
+++ b/build.gradle
@@ -40,8 +40,30 @@ dependencies {
 
     // bcrypt
     implementation 'at.favre.lib:bcrypt:0.10.2'
+
+    // Querydsl 의존성
+    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
+    annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
+    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
+    annotationProcessor "jakarta.persistence:jakarta.persistence-api"
 }
 
 tasks.named('test') {
     useJUnitPlatform()
+}
+
+// Q클래스 파일 경로 설정
+def generated = 'src/main/generated'
+
+tasks.withType(JavaCompile) {
+    options.getGeneratedSourceOutputDirectory().set(file(generated))
+}
+
+sourceSets {
+    main.java.srcDirs += [ generated ]
+}
+
+// clean 시 generated 파일 제거
+clean {
+    delete file('src/main/generated')
 }
